src/cses/grid_coloring_i/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/grid_coloring_i/grid_coloring_i.cpp.
/Users/michael/repos/competitive-programming/src/cses/grid_coloring_i/grid_coloring_i.cpp:3:10: error: 'iostream' file not found [clang-diagnostic-error]
    3 | #include <iostream>
      |          ^~~~~~~~~~
Found compiler error(s).
